welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:2: error: Missing closing brace `}' assumed here
def faireMotif () {
^PictureMono2:2: error: expected class or object definition
def faireMotif () {
^PictureMono2:30: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:30: error: expected start of definition
override def run() {
         ^