welcome.lessons.welcome.methods.picture.PictureMono2.scala.code

def faireMotif () {
  for (cpt0 <- 1 to 3) {
  	for (cpt <- 1 to 4) {
      avance(2)
  	  baisseBrosse()
  		leveBrosse()
  		avance()
  		gauche()
  		avance()
  		baisseBrosse()
  		leveBrosse()
  		droite()
  		avance()
  		droite()
  		avance()
  		baisseBrosse()
  		leveBrosse()
  		gauche()
  		avance()
  		gauche()
		}
		avance(6)
   }
  retourne()
  avance(20)
  droite()
  avance(7) 
 
override def run() {
 for (cpt1 <- 1 to 3) {
   faireMotif()
 }

